[workspace]

[package]
name = "loco-cli"
version = "0.2.6"
edition = "2021"
description = "loco cli website generator"
license = "Apache-2.0"
homepage = "https://docs.rs/loco-cli"
documentation = "https://docs.rs/loco-cli"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]

[profile.release]
strip = true

[lib]
name = "loco_cli"
path = "src/lib.rs"

[[bin]]
name = "loco"
path = "src/bin/main.rs"
required-features = []


[features]
default = []
gix = ["dep:gix"]
git2 = ["dep:git2"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.27"
serde_regex = "1.1.0"
eyre = { version = "0.6.9" }
rand = { version = "0.8.5" }
requestty = "0.5.0"
regex = { version = "1.10.2" }
ignore = "0.4.21"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
git2 = { version = "0.18.1", optional = true }
gix = { version = "0.56.0", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls-trust-dns",
], optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
trycmd = "0.14.19"
tree-fs = "0.1.0"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
