[workspace]

[package]
name = "loco-cli"
version = "0.13.0"
edition = "2021"
description = "loco cli website generator"
license = "Apache-2.0"
homepage = "https://docs.rs/loco-cli"
documentation = "https://docs.rs/loco-cli"

[profile.release]
strip = true

[lib]
name = "loco_cli"
path = "src/lib.rs"

[[bin]]
name = "loco"
path = "src/bin/main.rs"
required-features = []


[features]
default = []

[dependencies]
