[package]
name = "loco-extras"
version = "0.1.4"
description = "Common loco components"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
# initializer
axum-prometheus = { version = "0.6.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [
  "normalize-path",
] }

[dependencies.loco-rs]
path = "../"
version = "0.3.0"
default-features = true
features = ["with-db", "auth_jwt"]

[features]
default = ["full"]
full = [
  "initializer-prometheus",
  "initializer-extra-db",
  "initializer-multi-db",
  "initializer-normalize-path",
]

initializer-prometheus = ["dep:axum-prometheus"]
initializer-extra-db = []
initializer-multi-db = ["dep:serde_json"]
initializer-normalize-path = ["dep:tower", "dep:tower-http"]
