[package]
name = "loco-extras"
version = "0.4.0"
description = "Common loco components"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
# initializer
axum-prometheus = { version = "0.6.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [
  "normalize-path",
] }
opentelemetry = { version = "0.22" , optional = true}
opentelemetry-otlp = { version = "0.15", optional = true, features = ["grpc-tonic"] }
axum-tracing-opentelemetry = { version = "0.18", optional = true }
init-tracing-opentelemetry = { version = "0.18", optional = true , features = ["otlp", "tracing_subscriber_ext"] }
tracing-opentelemetry-instrumentation-sdk = { version = "0.18", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true , features = ["env-filter", "json"] }
tracing = { version = "0.1.40", optional = true }
mongodb = { version = "2.8.0", optional = true }

[dependencies.loco-rs]
path = "../"
version = "0.4.0"
default-features = true
features = ["with-db", "auth_jwt"]

[features]
default = ["full"]
full = [
  "initializer-prometheus",
  "initializer-extra-db",
  "initializer-multi-db",
  "initializer-normalize-path",
  "initializer-opentelemetry",
  "initializer-mongodb",
]

initializer-prometheus = ["dep:axum-prometheus"]
initializer-extra-db = []
initializer-multi-db = ["dep:serde_json"]
initializer-normalize-path = ["dep:tower", "dep:tower-http"]
initializer-opentelemetry = ["dep:opentelemetry","dep:opentelemetry-otlp","dep:axum-tracing-opentelemetry",
    "dep:init-tracing-opentelemetry", "dep:tracing-opentelemetry-instrumentation-sdk","dep:tracing-subscriber","dep:tracing"]
initializer-mongodb = ["dep:mongodb", "dep:serde", "dep:serde_json"]
