[package]
name = "loco-gen"
version = "0.13.0"
description = "Loco generators"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
with-db = []

[lib]
path = "src/lib.rs"

[dependencies]

rrgen = "0.5.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

clap = { version = "4.4.7", features = ["derive"] }
dialoguer = "0.11"
duct = "0.13"

[dev-dependencies]
tree-fs = { version = "0.2.1" }
syn = { version = "2", features = ["full"] }
