[package]
name = "loco-gen"
version = "0.15.0"
description = "Loco generators"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
with-db = []

[lib]
path = "src/lib.rs"

[dependencies]

cruet = "0.14.0"
rrgen = "0.5.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
heck = { workspace = true }
tera = { workspace = true }
duct = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
include_dir = { version = "0.7.4" }

[dev-dependencies]
tree-fs = { version = "0.3" }
syn = { version = "2", features = ["full"] }
serial_test = "3.1.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
insta = { version = "1.41.1", features = ["redactions", "yaml", "filters"] }
rstest = "0.23.0"
