[workspace]

[package]
name = "loco"
version = "0.15.0"
edition = "2021"
description = "Loco new app generator"
license = "Apache-2.0"
homepage = "https://docs.rs/loco"
documentation = "https://docs.rs/loco"
readme = "README.md"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]
include = ["src/**", "base_template/**", "Cargo.toml", "setup.rhai"]

[features]
test-wizard = []

[profile.release]
strip = true

[[bin]]
name = "loco"
path = "src/bin/main.rs"
required-features = []


[dependencies]
thiserror = { version = "1.0.63" }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
serde_variant = { version = "0.1.3" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
heck = { version = "0.5.0" }
dialoguer = "0.11.0"
strum = { version = "0.26", features = ["derive"] }
unicode-xid = { version = "0.2.6" }
rhai = { version = "1.20.0" }
include_dir = { version = "0.7.4" }
fs_extra = { version = "1.3.0" }
walkdir = { version = "2.5.0" }
tera = { version = "1.20.0" }
colored = { version = "2" }
duct = { version = "0.13.6" }
rand = { version = "0.8.5" }
tree-fs = { version = "0.3" }

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
serde_yaml = { version = "0.9" }
insta = { version = "1.41.1", features = ["redactions", "yaml", "filters"] }
rstest = { version = "0.23.0" }
mockall = "0.13.0"
toml = "0.8.19"
regex = "1.11.1"
