[package]
name = "rgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tera = "1"
heck = "*"
gray_matter = "*"
thiserror = "*"
serde_json = "*"
serde = "*"
regex = "*"
serde_regex = "*"
fs-err = "*"

[dev-dependencies]
insta = "*"
fs_extra = "*"
dir-diff = "*"
