[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/bin/main.rs"
required-features = []

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
eyre = "0.6"
duct = { workspace = true }
cargo_metadata = "0.18.1"
requestty = "0.5.0"
regex = { version = "1.10.2" }
thiserror = "1"
tabled = "0.14.0"
colored = { version = "3.0" }

[dev-dependencies]
