[workspace]
# this empty pragma excludes this project from workspaces

[package]
name = "blo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "*", path = "../../" }
loco-extras = { version = "*", path = "../../loco-extras", features = ["full"] }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = { version = "0.7.1", features = ["multipart"] }
axum_session = { version = "0.10.1", default-features = false }
axum-extra = { version = "0.9", features = ["cookie"] }

include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
tera = "1.19.1"
tower = "0.4.13"
futures-util = "0.3.30"

[[bin]]
name = "blo-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { version = "*", path = "../../", features = ["testing"] }
trycmd = "0.14.19"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
loco-macros = { path = "../../macros" }
axum-test = { version = "14.3.0" }
