[workspace]
# this empty pragma excludes this project from workspaces

[package]
name = "demo_app"
version = "0.1.0"
edition = "2021"
default-run = "demo_app-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { path = "../../", version = "*" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sea-orm = { version = "1.1.0", default-features = false, features = ["macros"] }
validator = { version = "0.18" }
include_dir = "0.7.3"

axum_session = { version = "0.10.1", default-features = false }

tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
tera = "1.19.1"
tower = "0.4.13"
futures-util = "0.3.30"
utoipa = "4.2.3"

[[bin]]
name = "demo_app-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { path = "../../", version = "*", features = ["testing"] }
trycmd = "0.14.19"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
axum-test = { version = "16" }
