[workspace]

[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { path = "../../", version = "*", default-features = false, features = [
  "cli",
] }
serde = "1"
serde_json = "1"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
validator = { version = "0.19.0" }

axum = "0.8.1"
include_dir = "0.7.3"
uuid = { version = "1.8.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

lazy_static = "1"

kalosm = { version = "0.3.2", features = ["language", "metal"] }
futures-util = "0.3.30"
axum-streams = { version = "0.14.2", features = ["text"] }
zstd-sys = { version = "=2.0.9" }

[[bin]]
name = "inference"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { path = "../../", version = "*", default-features = false, features = [
  "cli",
  "testing",
] }
trycmd = "0.14.19"
insta = { version = "1.38.0", features = ["redactions", "yaml", "filters"] }
