[workspace]

[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "*", path = "../../", default-features = false, features = [
  "cli",
] }
serde = "*"
serde_json = "*"
eyre = "*"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
validator = { version = "*" }

axum = "0.7.1"
include_dir = "*"
uuid = { version = "*", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

candle-transformers = "*"
candle-nn = "*"
candle-core = "*"
tokenizers = "*"
hf-hub = "*"
lazy_static = "*"

rust-bert = { version = "*", features = ["download-libtorch"] }

[[bin]]
name = "inference"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "*"
rstest = "*"
loco-rs = { version = "*", path = "../../", default-features = false, features = [
  "cli",
  "testing",
] }
trycmd = "0.14.19"
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
